--- a/EDA_Preparation_DENUE_(JAL).ipynb
+++ b/EDA_Preparation_DENUE_(JAL).ipynb
@@ -31,10 +31,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "#for exporting to an excel file\n",
-        "import xlsxwriter"
+        "import matplotlib.pyplot as plt"
       ]
     },
     {
@@ -1347,9 +1344,7 @@
         }
       ],
       "source": [
-        "#Reordering columns for for export\n",
-        "denue = denue[['id', 'Nombre', 'Razon Social', 'Tipo Actividad', 'Empleados', 'Direccion', 'Entre calles', 'CP', 'Municipio', 'Localidad', 'Region', 'ageb', 'Telefono', 'email', 'Sitio Web', 'fecha_alta']]\n",
-        "denue.head()"
+        "#Reordering columns for for export\n"
       ]
     },
     {
@@ -1362,8 +1357,7 @@
       "source": [
         "#Since Centro region accounts for almost 60% of all records, will save this region into a first excel tab, and the rest of the regions to the second tab\n",
         "sheet1 = denue[denue['Region'] == 'Centro']\n",
-        "sheet2 = denue[denue['Region'] != 'Centro']\n",
-        "sheets = {'Centro':sheet1, 'Otras regiones':sheet2}"
+        "sheet2 = denue[denue['Region'] != 'Centro']"
       ]
     },
     {
@@ -1392,7 +1386,7 @@
       "name": "EDA / Preparation DENUE (JAL).ipynb",
       "provenance": [],
       "mount_file_id": "1ZUQ-2PYlFwK6yR6vFEs6o4SoKmPbdqnQ",
-      "authorship_tag": "ABX9TyP5X7K7oIR4IfFWhKa2TbSV",
+      "authorship_tag": "ABX9TyMylXfYdS4Zfu3pqzdobQvR",
       "include_colab_link": true
     },
     "kernelspec": {
