--- a/EDA_Preparation_DENUE_(JAL).ipynb
+++ b/EDA_Preparation_DENUE_(JAL).ipynb
@@ -47,7 +47,7 @@
         "from gspread_dataframe import get_as_dataframe, set_with_dataframe\n",
         "from google.colab import auth\n",
         "\n",
-        "#verification from account for reading files you have acces to\n",
+        "#verification from account for reading files\n",
         "auth.authenticate_user()\n",
         "from google.auth import default\n",
         "creds, _ = default()\n",
@@ -1386,7 +1386,7 @@
       "name": "EDA / Preparation DENUE (JAL).ipynb",
       "provenance": [],
       "mount_file_id": "1ZUQ-2PYlFwK6yR6vFEs6o4SoKmPbdqnQ",
-      "authorship_tag": "ABX9TyMylXfYdS4Zfu3pqzdobQvR",
+      "authorship_tag": "ABX9TyP695yzegGGd02maXXqUEy0",
       "include_colab_link": true
     },
     "kernelspec": {
