--- a/EDA_Preparation_DENUE_(JAL).ipynb
+++ b/EDA_Preparation_DENUE_(JAL).ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "PdxLF3Mqibk5"
       },
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "W7dOoJjzi1Tb"
       },
@@ -67,13 +67,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tbwLcDhzjeYE",
-        "outputId": "c286296e-415c-4e1a-f8dc-57891002080e"
+        "outputId": "c50128c9-4fff-4404-9096-a22f58a63bec"
       },
       "outputs": [
         {
@@ -92,14 +92,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 846
         },
         "id": "ZNi4VvUUnguW",
-        "outputId": "48561ad6-daac-4d2c-ee5e-648dff46a0a1"
+        "outputId": "916a789c-6316-40e6-890a-730690b50b63"
       },
       "outputs": [
         {
@@ -189,7 +189,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9b48f24d-7baf-4c62-885f-31c4b2853af3\">\n",
+              "  <div id=\"df-b3b4a1e2-cec0-428c-bc86-22b743b05208\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -357,7 +357,7 @@
               "</table>\n",
               "<p>5 rows × 42 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9b48f24d-7baf-4c62-885f-31c4b2853af3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3b4a1e2-cec0-428c-bc86-22b743b05208')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -408,12 +408,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9b48f24d-7baf-4c62-885f-31c4b2853af3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b3b4a1e2-cec0-428c-bc86-22b743b05208 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9b48f24d-7baf-4c62-885f-31c4b2853af3');\n",
+              "          const element = document.querySelector('#df-b3b4a1e2-cec0-428c-bc86-22b743b05208');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -436,11 +436,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 9
         }
       ],
       "source": [
-        "print('\\n We have 42 columns, however a few of them wont be necessary, others will be concatenated for better understanding from the final user \\n')\n",
+        "print('\\n We have', denue.shape[1] , 'columns, however a few of them wont be necessary, others will be concatenated for better understanding from the final user \\n')\n",
         "print('\\n Dataset shape:')\n",
         "print(denue.shape)\n",
         "print('\\n Columns:')\n",
@@ -450,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "D9TOR6Z2uZMy"
       },
@@ -465,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "_QRNYB8Xg3AG"
       },
@@ -479,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "_r41HqT8oJAL"
       },
@@ -492,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "SR2DoQ5Hr5W7"
       },
@@ -504,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "6wr8VqMK1QI0"
       },
@@ -530,7 +530,7 @@
         "id": "mvrpKYWa3vEe",
         "outputId": "7c3ab8c1-44a4-4ee8-b9a0-8595f741c8dd"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -548,7 +548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -594,7 +594,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "D2ciLK260p_s"
       },
@@ -606,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -680,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -945,7 +945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -974,7 +974,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1014,7 +1014,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1063,7 +1063,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1114,7 +1114,7 @@
         "id": "tg0cOTDC1yHC",
         "outputId": "6c1ec559-f62d-4e12-908f-7937186ef719"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1483,7 +1483,7 @@
       "name": "EDA / Preparation DENUE (JAL).ipynb",
       "provenance": [],
       "mount_file_id": "1ZUQ-2PYlFwK6yR6vFEs6o4SoKmPbdqnQ",
-      "authorship_tag": "ABX9TyNYDsXUIuslHMI23GSNZn5I",
+      "authorship_tag": "ABX9TyMAZF6gGelA6vQ8K2ib+vbO",
       "include_colab_link": true
     },
     "kernelspec": {
